now uses templates for toolbar and navbuttons

--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -8,7 +8,7 @@
 #:set air_Q5 'I would be better wearing a pollution mask'
 #:set air_Q6 'I prefer wearing a pollution mask'
 
-#:set PG_NAME "Air Pollution"
+#:set PG_TITLE "Air Pollution"
 
 # ----
 <AirPollutionLandingPage>:
