--- a/layout_files/TraumaticBrainInjury.kv
+++ b/layout_files/TraumaticBrainInjury.kv
@@ -14,19 +14,9 @@
     BoxLayout:
         orientation: 'vertical'
 
-        # MDTopAppBar:
-        #     title: trauma_toolbar_title
-        #     halign: 'left'
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
+        MyActionBar:
+            title:trauma_toolbar_title
 
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: trauma_toolbar_title
-                    on_release: root.chevron_left()
 
         Label:
             text:''
@@ -58,35 +48,14 @@
                 root.arrow_right()
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:
-                    # root.parent.ids['TraumaticBrainInjuryPage'].ids['android_tabs'].switch_tab('1')
-                    root.arrow_right()
+        NavButtons
 
 
 <TraumaticBrainInjuryPage>:
     BoxLayout:
         orientation: 'vertical'
-        # MDTopAppBar:
-        #     title: trauma_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-        #     elevation:8
-
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: trauma_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:trauma_toolbar_title
         # BoxLayout:
         #     size_hint_y:0.7
 
@@ -163,17 +132,7 @@
             Widget:
                 size_hint_x:0.2
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
 
 
 
@@ -181,19 +140,8 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        # MDTopAppBar:
-
-        #     title: trauma_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: trauma_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:trauma_toolbar_title
 
         Label:
             text: 'Your score is:'
@@ -235,13 +183,4 @@
             size_hint_y:0.7
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
