--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -10,26 +10,9 @@
 
 	BoxLayout:
 		orientation: 'vertical'
-		canvas.before:
-			Color:
-				rgba: BG_COLOR
-			Rectangle:
-				size: self.size
-				pos: self.pos
 
-		# MDTopAppBar:
-		# 	title: alcohol_toolbar_title
-		# 	halign: 'left'
-		# 	left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-		# 	right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-		# 	# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-		# 	elevation:8
-
-		ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: alcohol_toolbar_title
-					on_release: root.chevron_left()
+		MyActionBar:
+            title:alcohol_toolbar_title
 
 		Label:
 			text:''
@@ -63,40 +46,13 @@
 				root.arrow_right()
 
 
-		BoxLayout:
-			orientation: 'horizontal'
-			size_hint_y:0.3
-			Button:
-				# size_hint_x:1
-				text:'                     <                       '
-				on_release:root.arrow_left()
-			Button:
-				size_hint_x:1
-				text:'                     >                       '
-				on_release:
-					# root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
-					root.arrow_right()
+		NavButtons
 
 <AlcoholUsagePage>:
 	BoxLayout:
 		orientation: 'vertical'
-		canvas.before:
-			Color:
-				rgba: BG_COLOR
-			Rectangle:
-				size: self.size
-				pos: self.pos
-		# MDTopAppBar:
-		# 	title: alcohol_toolbar_title
-		# 	left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-		# 	right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-		# 	elevation:8
-
-		ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: alcohol_toolbar_title
-					on_release: root.chevron_left()
+		MyActionBar:
+            title:alcohol_toolbar_title
 		# Label:
 		# 	text:''
 
@@ -228,17 +184,7 @@
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(1)
 
-		BoxLayout:
-			size_hint_y:0.2
-			orientation: 'horizontal'
-			Button:
-				size_hint_x:1
-				text:'                     <                       '
-				on_release:root.arrow_left()
-			Button:
-				size_hint_x:1
-				text:'                     >                       '
-				on_release:root.arrow_right()
+		NavButtons
 
 	FloatLayout:
 	    orientation: 'vertical'
@@ -254,24 +200,8 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-			Color:
-				rgba: BG_COLOR
-			Rectangle:
-				size: self.size
-				pos: self.pos
-        # MDTopAppBar:
-
-        #     title: alcohol_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-        ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: alcohol_toolbar_title
-					on_release: root.chevron_left()
+        MyActionBar:
+            title:alcohol_toolbar_title
 
         Label:
             text: 'Your score is:'
@@ -311,17 +241,4 @@
             on_release:root.arrow_right()
 
 
-        Label:
-            size_hint_y:0.7
-
-
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
