--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -11,18 +11,8 @@
 	BoxLayout:
 		orientation: 'vertical'
 
-		# MDTopAppBar:
-		# 	title: cognitive_toolbar_title
-		# 	halign: 'left'
-		# 	left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-		# 	right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-		# 	# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-		# 	elevation:8
-		ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: cognitive_toolbar_title
-					on_release: root.chevron_left()
+		MyActionBar:
+            title:cognitive_toolbar_title
 
 		Label:
 			text:''
@@ -51,33 +41,13 @@
 			pos_hint:{'center_x':0.5}
 			on_release: root.arrow_right()
 
-		BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:
-                    root.arrow_right()
+		NavButtons
 
 <CognitiveDeclinePage>:
 	BoxLayout:
 		orientation: 'vertical'
-		# MDTopAppBar:
-		# 	title: cognitive_toolbar_title
-		# 	left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-		# 	right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-		# 	elevation:8
-
-		ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: cognitive_toolbar_title
-					on_release: root.chevron_left()
+		MyActionBar:
+            title:cognitive_toolbar_title
 
 		# BoxLayout:
 		# 	size_hint_y:1
@@ -151,34 +121,14 @@
 		Widget
 			size_hint_y:0.5
 
-		BoxLayout:
-			size_hint_y:0.1
-			orientation: 'horizontal'
-			Button:
-				text:'                     <                       '
-				size_hint_x:1
-				on_release:root.arrow_left()
-			Button:
-				text:'                     >                       '
-				size_hint_x:1
-				on_release:root.arrow_right()
+		NavButtons
 
 <CognitiveDeclineScorePage>:
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        # MDTopAppBar:
-
-        #     title: cognitive_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-        ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: cognitive_toolbar_title
-					on_release: root.chevron_left()
+        MyActionBar:
+            title:cognitive_toolbar_title
 
         Label:
             text: 'Your score is:'
@@ -217,13 +167,4 @@
 
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
