--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -28,26 +28,8 @@
 
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-            Color:
-                rgba: BG_COLOR
-            Rectangle:
-                size: self.size
-                pos: self.pos
-
-        # MDTopAppBar:
-        #     title: diet_toolbar_title
-        #     halign: 'left'
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: diet_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:diet_toolbar_title
 
         Widget:
             size_hint_y:0.3
@@ -81,44 +63,15 @@
                 # root.parent.ids['DietAndFoodPage'].ids['android_tabs'].switch_tab('1')
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:
-                    # root.parent.ids['DietAndFoodPage'].ids['android_tabs'].switch_tab('1')
-                    root.arrow_right()
+        NavButtons
 
 
 <DietAndFoodPage>:
 
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-            Color:
-                rgba: BG_COLOR
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        # MDTopAppBar:
-        #     title: diet_toolbar_title
-        #     halign: 'left'
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: diet_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:diet_toolbar_title
 
         # BoxLayout:
         #     size_hint_y:0.7
@@ -238,17 +191,7 @@
             on_parent:
                 for i in range(0,8): txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.button_press))
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:root.arrow_right()
+        NavButtons
 
 
 
@@ -308,25 +251,8 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-            Color:
-                rgba: BG_COLOR
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        # MDTopAppBar:
-
-        #     title: diet_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: diet_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:diet_toolbar_title
 
         Label:
             text: 'Your score is:'
@@ -370,13 +296,4 @@
             size_hint_y:0.7
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
