--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -6,25 +6,8 @@
 
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-            Color:
-                rgba: BG_COLOR
-            Rectangle:
-                size: self.size
-                pos: self.pos
-
-        # MDTopAppBar:
-        #     title: physical_toolbar_title
-        #     halign: 'left'
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: physical_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:physical_toolbar_title
 
         Label:
             text:''
@@ -57,39 +40,13 @@
                 # root.parent.ids['PhysicalActivityPage'].ids['android_tabs'].switch_tab('1')
                 root.arrow_right()
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:
-                    # root.parent.ids['PhysicalActivityPage'].ids['android_tabs'].switch_tab('1')
-                    root.arrow_right()
+        NavButtons
 
 <PhysicalActivityPage>:
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-            Color:
-                rgba: BG_COLOR
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        # MDTopAppBar:
-        #     title: physical_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-        #     elevation:8
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: physical_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:physical_toolbar_title
         # Label:
         #     text:''
 
@@ -180,17 +137,7 @@
             #                     for i in [1,2,3,4,5,6,7,8,9,'/',0,'del']: txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.on_numpad_press))
 
 
-        BoxLayout:
-            size_hint_y:0.2
-            orientation: 'horizontal'
-            Button:
-                size_hint_x:1
-                text:'                     <                       '
-                on_release: root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release: root.arrow_right()
+        NavButtons
 
     # FloatLayout:
     #     orientation: 'vertical'
@@ -206,25 +153,8 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        canvas.before:
-            Color:
-                rgba: BG_COLOR
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        # MDTopAppBar:
-
-        #     title: physical_toolbar_title
-        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-        #     elevation:8
-
-        ActionBar:
-            ActionView:
-                ActionPrevious:
-                    title: physical_toolbar_title
-                    on_release: root.chevron_left()
+        MyActionBar:
+            title:physical_toolbar_title
 
         Label:
             text: 'Your score is:'
@@ -268,13 +198,4 @@
             size_hint_y:0.7
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
