--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -39,7 +39,7 @@
 
 <HyperTensionPage>:
     BoxLayout:
-
+        orientation: 'vertical'
         MyActionBar:
             title:hypertension_toolbar_title
 
@@ -78,6 +78,7 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
+
         MyActionBar:
             title:hypertension_toolbar_title
 
