--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -53,20 +53,4 @@
 					Switch:
 
 
-		NavButtons:
-		# BoxLayout:
-		# 	orientation: 'horizontal'
-		# 	Button:
-		# 		text:'                     <                       '
-		# 		size_hint_x:1
-		# 		size_hint_y:0.3
-		# 		on_release:
-		# 			root.manager.current='SociodemographicPage'
-		# 			root.manager.transition.direction="right"
-		# 	Button:
-		# 		text:'                     >                       '
-		# 		size_hint_x:1
-		# 		size_hint_y:0.3
-		# 		on_release:
-		# 			root.manager.current='AirPollutionLandingPage'
-		# 			root.manager.transition.direction="left"
+		NavButtons
