split riskassesment into own file, also use markdown text now

--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -55,27 +55,27 @@
 
 		MyButton:
 			text:'Risk Assesment'
-			on_release:
-				root.manager.current="RiskAssesmentPage"
-				root.manager.transition.direction="left"
+			on_release:	self.on_release_custom("RiskAssesmentPage")
+
 		Widget:
 			size_hint_y:0.05
 
 		MyButton:
 			text:'Educational Resources'
+			on_release:	self.on_release()
 		Widget:
 			size_hint_y:0.05
 
 		MyButton:
 			text: "Cognitive Rehabilitation"
+			on_release:	self.on_release()
 		Widget:
 			size_hint_y:0.05
 
 		MyButton:
 			text:'About'
-			on_release:
-				root.manager.transition.direction="left"
-				root.manager.current="AboutPage"
+			on_release: self.on_release_custom("AboutPage")
+
 		Widget
 
 		ScaleLabel:
