--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -23,27 +23,27 @@
 				# id:listt
 				BoxLayout:
 					orientation: 'vertical'
-					Button:
+					MyButton2:
 						text:'Urban'
 						background_normal: ''
 					    background_color: 1, .3, .4, .85
 						on_release: root.toggle(self)
 
-					Button:
+					MyButton2:
 						text:'Large Rural\n10,000 – 49,999 residents'
 						secondary_text:''
 						secondary_font_style:'Caption'
 						halign:'left'
 						on_release: root.toggle(self)
 
-					Button:
+					MyButton2:
 						text:'Small Rural'
 						secondary_text:'2,500 – 9,999 residents'
 						secondary_font_style:'Caption'
 						halign:'left'
 						on_release: root.toggle(self)
 
-					Button:
+					MyButton2:
 						text:'Isolated'
 						secondary_text:'<2,500 residents'
 						secondary_font_style:'Caption'
