--- a/health_app.kv
+++ b/health_app.kv
@@ -14,7 +14,7 @@
 
 #:set BTN_COLOR 69/255, 90/255, 100/255, 0.9
 
-#:set FILLER "                                             "
+#:set FILLER "  "
 
 #:include layout_files/templates.kv
 #:include layout_files/AirPollution.kv
@@ -30,6 +30,7 @@
 #:include layout_files/DepressionPage.kv
 #:include layout_files/TraumaticBrainInjury.kv
 #:include layout_files/CognitiveDecline.kv
+#:include layout_files/RiskAssesment.kv
 
 WindowManager:
 	id: WindowManager
@@ -168,228 +169,255 @@ WindowManager:
 		id:CognitiveDeclineScorePage
 		name:'CognitiveDeclineScorePage'
 
-# =======================================
-<RiskAssesmentPage>:
-	BoxLayout:
-		orientation: 'vertical'
+# # =======================================
+# <RiskAssesmentPage>:
+# 	BoxLayout:
+# 		orientation: 'vertical'
 
-		ActionBar:
-			ActionView:
-				HiddenIcon_ActionPrevious:
-				# ActionPrevious:
-				ActionButton:
-					icon:"pics/left.png"
-					on_release: root.chevron_left()
-				ActionButton:
-					text:"Risk Assesment"
+# 		MyActionBar:
+# 			title:"Risk Assesment"
 
-		BoxLayout:
-			orientation:'horizontal'
-			# md_bg_color:(90/255, 90/255, 90/255,0.25)
-			size_hint_y:.15
+# 		BoxLayout:
+# 			orientation:'horizontal'
+# 			# md_bg_color:(90/255, 90/255, 90/255,0.25)
+# 			size_hint_y:.15
 
-			BoxLayout:
-				orientation:'horizontal'
-				# BoxLayout:
-				# 	orientation:'vertical'
-				Label:
+# 			BoxLayout:
+# 				orientation:'horizontal'
+# 				# BoxLayout:
+# 				# 	orientation:'vertical'
+# 				Label:
 
-					text: 'Your Score:\n(higher is better)'
-					halign: 'center'
-					font_size:'14sp'
-					color: TXT_COLOR
+# 					text: 'Your Score:\n(higher is better)'
+# 					halign: 'center'
+# 					font_size:'14sp'
+# 					color: TXT_COLOR
 
-					# Label:
-					# 	text: ''
-					# 	halign: 'center'
+# 					# Label:
+# 					# 	text: ''
+# 					# 	halign: 'center'
 
-				Label:
-					color: TXT_COLOR
-					id:score_label
-					text: '0'
-					halign: 'left'
-					font_size:'26sp'
+# 				Label:
+# 					color: TXT_COLOR
+# 					id:score_label
+# 					text: '0'
+# 					halign: 'left'
+# 					font_size:'26sp'
 
-				Button:
-					text: '    Reset    '
-					halign: 'center'
-					# size_hint:(1,1)
-					# size_hint_y:0.5
-					size_hint_x:1
-					# _no_ripple_effect: True
+# 				Button:
+# 					text: '    Reset    '
+# 					halign: 'center'
 
-		Label:
-			text:''
-			size_hint_y:0.005
-			canvas.before:
-				Color:
-				    # rgba: 0, 1, 1, .6
-				    rgba: 252/255, 186/255, 3/255, 1
-			    Rectangle:
-			        size: self.size
-			        pos: self.pos
+# 					pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+# 					# background_color: BTN_COLOR
+# 					font_style:'Button'
+# 					# size_hint:(1,1)
+# 					# size_hint_y:0.5
+# 					size_hint_x:1
+# 					# _no_ripple_effect: True
 
-		ScrollView:
-			scroll_type: ['bars','content']
-			# scroll_wheel_distance: 20
-			bar_width: 10
-			do_scroll_x: False
-			do_scroll_y: True
-			bar_inactive_color: .55, .55, .55, 1
-			bar_color: .663, .663, .663, 1
+# 		Label:
+# 			text:''
+# 			size_hint_y:0.005
+# 			canvas.before:
+# 				Color:
+# 				    # rgba: 0, 1, 1, .6
+# 				    rgba: 252/255, 186/255, 3/255, 1
+# 			    Rectangle:
+# 			        size: self.size
+# 			        pos: self.pos
 
-			BoxLayout:
-				orientation:'vertical'
-				height:1500
-				size_hint_y:None
-				pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-				pos_hint_x:0.5
+# 		ScrollView:
+# 			scroll_type: ['bars','content']
+# 			# scroll_wheel_distance: 20
+# 			bar_width: 10
+# 			do_scroll_x: False
+# 			do_scroll_y: True
+# 			bar_inactive_color: .55, .55, .55, 1
+# 			bar_color: .663, .663, .663, 1
 
-				MyButton2:
-					id:SocioDemographicPage_label
-					text: 'Demographics' + SEC_TEXT
-					on_release:
-						root.manager.current="SociodemographicPage"
-						root.manager.transition.direction="left"
+# 			BoxLayout:
+# 				orientation:'vertical'
+# 				height:1500
+# 				size_hint_y:None
+# 				pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+# 				pos_hint_x:0.5
+
+# 				MyButton2:
+# 					id:SocioDemographicPage_label
+# 					text: 'Demographics [size=8sp]' + SEC_TEXT +'[/size]'
+# 					on_release:
+# 						root.manager.current="SociodemographicPage"
+# 						root.manager.transition.direction="left"
 
 
-				MyButton2:
-					id:LocationPage_label
-					text: 'Location' + SEC_TEXT
-					on_release:
-						root.manager.current="LocationPage"
-						root.manager.transition.direction="left"
+# 				MyButton2:
+# 					id:LocationPage_label
+# 					text: 'Location' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="LocationPage"
+# 						root.manager.transition.direction="left"
 
 
-				MyButton2:
-					id:AirPollutionPage_label
-					text: 'Air Pollution' + SEC_TEXT
-					on_release:
-						root.manager.current="AirPollutionLandingPage"
-						root.manager.transition.direction="left"
+# 				MyButton2:
+# 					id:AirPollutionPage_label
+# 					text: 'Air Pollution [size=8sp]' + SEC_TEXT +'[/size]'
+# 					on_release:
+# 						root.manager.current="AirPollutionLandingPage"
+# 						root.manager.transition.direction="left"
 
 
 
-				MyButton2:
-					id:DietAndFoodPage_label
-					text: 'Diet & Food' + SEC_TEXT
-					on_release:
-						root.manager.current="DietLandingPage"
-						root.manager.transition.direction="left"
+# 				MyButton2:
+# 					id:DietAndFoodPage_label
+# 					text: 'Diet & Food' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="DietLandingPage"
+# 						root.manager.transition.direction="left"
 
 
-				MyButton2:
-					id:PhysicalActivityPage_label
-					text: 'Physical Activity' + SEC_TEXT
-					on_release:
-						root.manager.current="PhysicalActivityLandingPage"
-						root.manager.transition.direction="left"
-					# IconLeftWidget:
-					# 	icon:'arm-flex-outline'
+# 				MyButton2:
+# 					id:PhysicalActivityPage_label
+# 					text: 'Physical Activity' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="PhysicalActivityLandingPage"
+# 						root.manager.transition.direction="left"
+# 					# IconLeftWidget:
+# 					# 	icon:'arm-flex-outline'
 
-				MyButton2:
-					id:AlcoholUsagePage_label
-					text: 'Alcohol Usage' + SEC_TEXT
-					on_release:
-						root.manager.current="AlcoholLandingPage"
-						root.manager.transition.direction="left"
-					# IconLeftWidget:
-					# 	icon:'glass-cocktail'
+# 				MyButton2:
+# 					id:AlcoholUsagePage_label
+# 					text: 'Alcohol Usage' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="AlcoholLandingPage"
+# 						root.manager.transition.direction="left"
+# 					# IconLeftWidget:
+# 					# 	icon:'glass-cocktail'
 
-				MyButton2:
-					id:DepressionPage_label
-					text: 'Depression' + SEC_TEXT
-					on_release:
-						root.manager.current="DepressionLandingPage"
-						root.manager.transition.direction="left"
-					# IconLeftWidget:
-					# 	icon:'head-alert-outline'
-
-
-				MyButton2:
-					id:HyperTensionPage_label
-					text: 'Hypertension' + SEC_TEXT
-					on_release:
-						root.manager.current="HyperTensionLandingPage"
-						root.manager.transition.direction="left"
-					# IconLeftWidget:
-					# 	icon:'calculator-variant-outline'
+# 				MyButton2:
+# 					id:DepressionPage_label
+# 					text: 'Depression' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="DepressionLandingPage"
+# 						root.manager.transition.direction="left"
+# 					# IconLeftWidget:
+# 					# 	icon:'head-alert-outline'
 
 
-
-				MyButton2:
-					id:TraumaticBrainInjuryPage_label
-					text: 'Traumatic Brain Injury' + SEC_TEXT
-					on_release:
-						root.manager.current="TraumaticBrainInjuryLandingPage"
-						root.manager.transition.direction="left"
-					# IconLeftWidget:
-					# 	icon:'brain'
-
-				MyButton2:
-					id:CognitiveDeclinePage_label
-					text: 'Cognitive Decline' + SEC_TEXT
-					on_release:
-						root.manager.current="CognitiveDeclineLandingPage"
-						root.manager.transition.direction="left"
-					# IconLeftWidget:
-					# 	icon:'chart-multiline'
-
-# =======================================
-# ----
+# 				MyButton2:
+# 					id:HyperTensionPage_label
+# 					text: 'Hypertension' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="HyperTensionLandingPage"
+# 						root.manager.transition.direction="left"
+# 					# IconLeftWidget:
+# 					# 	icon:'calculator-variant-outline'
 
 
-# ----
+
+# 				MyButton2:
+# 					id:TraumaticBrainInjuryPage_label
+# 					text: 'Traumatic Brain Injury' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="TraumaticBrainInjuryLandingPage"
+# 						root.manager.transition.direction="left"
+# 					# IconLeftWidget:
+# 					# 	icon:'brain'
+
+# 				MyButton2:
+# 					id:CognitiveDeclinePage_label
+# 					text: 'Cognitive Decline' + SEC_TEXT
+# 					on_release:
+# 						root.manager.current="CognitiveDeclineLandingPage"
+# 						root.manager.transition.direction="left"
+# 					# IconLeftWidget:
+# 					# 	icon:'chart-multiline'
+
+# # =======================================
+# # ----
 
 
-<MyButton>:
-	text:""
-	pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-	size_hint:BTN_WIDTH,BTN_HEIGHT  #separate size hints results in clock iteration error
-	font_style:'Button'
-	background_color: BTN_COLOR
+# # ----
 
-<MyButton2>:
-	text:""
-	pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-	size_hint_x:0.8
-	# size_hint:BTN_WIDTH,BTN_HEIGHT  #separate size hints results in clock iteration error
-	font_style:'Button'
-	background_color: BTN_COLOR
 
-<MyActionBar>:
-	title:""
-	pos_hint: {'top':1}
-	ActionView:
-		HiddenIcon_ActionPrevious:
-		# # ActionPrevious:
-		ActionButton:
-			icon:"pics/left.png"
-			important: True
-			on_release: root.chevron_left(root.parent.parent)
-		ActionButton:
-			id: AD
-			text:root.title
-			important: True
-			background_down: self.background_normal
-			on_release: root.chevron_left(root.parent.parent)
-		ActionButton:
-			# text:"  "
-		ActionButton:
-			important: True
-			icon:'pics/sun.png'
-			on_release: app.toggle_theme()
+# <MyButton>:
+# 	text:""
+# 	pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+# 	halign: 'center'
+# 	size_hint:BTN_WIDTH,BTN_HEIGHT  #separate size hints results in clock iteration error
+# 	font_style:'Button'
+# 	background_color: BTN_COLOR
+# 	# border: [0,0,0,0]
+
+# <MyButton2>:
+# 	text:""
+# 	pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+# 	size_hint_x:0.8
+# 	font_style:'Button'
+# 	background_color: BTN_COLOR
+# 	halign: 'center'
+# 	markup:True
+
+
+# <RoundedButton>:
+# 	background_color: (0,0,0,0)
+# 	background_normal:''
+# 	canvas.before:
+# 		Color:
+# 			rgba: BTN_COLOR
+# 		RoundedRectangle:
+# 			size:self.size
+# 			pos:self.pos
+# 			radius: [18]
+
+# 	# on_press: canvas.before:
+# 	# 			Color:
+# 	# 				rgba: BTN_COLOR
+# 	# 			RoundedRectangle:
+# 	# 				size:self.size
+# 	# 				pos:self.pos
+# 	# 				radius: [18]
+
+# <MyActionBar>:
+# 	title:""
+# 	to_page:root.parent.parent
+# 	pos_hint: {'top':1}
+# 	background_color:BTN_COLOR
+# 	# background_image:"pics/presplash_logo.png"
+# 	icon: "reset.png"
+# 	markup:True
+# 	ActionView:
+# 		HiddenIcon_ActionPrevious:
+# 		# # ActionPrevious:
+# 		ActionButton:
+# 			icon:"pics/left.png"
+# 			important: True
+# 			on_release: root.chevron_left(root.parent.parent)
+# 		ActionButton:
+# 			id: AD
+# 			text:root.title
+# 			important: True
+# 			background_down: self.background_normal
+# 			on_release: root.chevron_left(root.parent.parent)
+# 		ActionButton:
+# 			# text:"  "
+# 		ActionButton:
+# 			important: True
+# 			icon:'pics/sun.png'
+# 			on_release: app.toggle_theme()
 
 
 # =======================================
 <AboutPage>:
 	BoxLayout:
 		orientation: 'vertical'
-		ActionBar:
-			ActionView:
-				ActionPrevious:
-					title: 'About'
-					on_release: root.chevron_left()
+		MyActionBar:
+			title:"About"
+			to_page:"LandingPage"
+			# ActionView:
+			# 	ActionPrevious:
+			# 		title: 'About'
+			# 		on_release: root.chevron_left()
 		Widget
 		Label:
 			canvas:
